REmoved debugger statement

--- a/TPS.Web/Views/NamSearch/GlobalArrayTest.cshtml
+++ b/TPS.Web/Views/NamSearch/GlobalArrayTest.cshtml
@@ -261,7 +261,7 @@
 
             // Display all the Nam fields
             function displayItem(id, outputElement) {
-                debugger;
+                //debugger;
                 // find and clear the output element:
                 if (outputElement === undefined) {
                     outputElement = $("#output")[0];
